@@ -1,6 +1,6 @@
 AUX crypto.patch 1271 SHA256 a065c9237097ba187edd128c7a23cf2bfd9c20ba3b08ba6422259abf448571e7 SHA512 179fae23884c93ee4c414d1f4f3cf83d668649204891d50c178adaeaa1b52d88326f0369dc3fe31bd45bf50988d198a287212dea78584373a87f88f0f1e424d6 WHIRLPOOL 6ff419e6e35aad4b03af096833f7e3f5afcc40b441603209fea48c3ef0fc6adfab86acccfe84a77155e60108868fa4b7137736af3e3987f7e6b2e1c5a2823661
 DIST haveclip-desktop-0.14.0-src.tar.gz 281370 SHA256 1059278558708d3fe59133a4e30892308eb34671809a5565d0e7d7f42dd222e6 SHA512 f6409b2b57eeb378850cb1ce145e219d41e895285c444545c22edfc6ec29094bd0d04f9b510dafa5ccba3131402d1dcefd131bf5983dd69c942295665fda85de WHIRLPOOL 5a9d7f7659b3377d451f7cc37b65101e9d41f7d946f45c800d7ead11690ba4b3655cca62b8b98e645b9a99ead70d8e1d632e0a3305f696557744c299de66940d
 EBUILD haveclip-0.14.0-r2.ebuild 630 SHA256 adff763733f5792531acd96468e4f24f910697b181dd0e869fe4d124b0e629bf SHA512 179b593ff79901c131f3c2ce2b9637a1b8bbefd8821dc8ef6992573b5039a4a14c0c4af33ef8e1858e2e8487091dfb967c105517544f56ae17e71651d70b4386 WHIRLPOOL 96ee8de17527d73f117897a258110c00a568b302b865c99e351cd44d48b67c5c2674b3640aff3ea1c3de92697bd73069e4106ded2fe1a9a40b53090353868dfa
-EBUILD haveclip-9999.ebuild 610 SHA256 6d57bfac1619b83b7291a0b2173c869b1b3cab1da0fc93b0e575ab52710d47a5 SHA512 b8b72959728a08ef24d4e65f22b207689c7563119eee731f39655d27aa034afb7fa051d8273b2ba8aade391dfd6e4575268a14a9191c44acaf4c8e5a8a520e86 WHIRLPOOL 6a43ac6614df3cd00f34aed03a8ff4a0b2504545ac6d51018bd70c73e6d3df94b0e534eb746f6d2e8af3babb172d343174ffe8360110a8ab1c15235104905e0c
-MISC ChangeLog 354 SHA256 f9d6b8dda68cddb6f8901816d9170b1ceeb29f02a7b9521bcc43d3ae5cc22a61 SHA512 a27ef91ff332cd311a85070c109c91a6124f12167a4641a432c2d2622d3377612617a7965965d345272ce50403b6e14d7ea5948edc5f73766e5a8dde17f762b2 WHIRLPOOL 997769c6ff1cc05c4efcd047ae648d513fe765d0e2dcc278cbdcd9a075a2369462bb4089a5daacbee3ef98e7211953282120d56b2d42a8517732ecdd8ce609f7
+EBUILD haveclip-9999.ebuild 624 SHA256 1938c86df114b074f879960a6ab3461dd017bd9c2ea470e0f4919d25c0d641e2 SHA512 f3aaa7da721889ec514ce7c5aa1658611852e2e9628b01431520b378ed36cc407b8956d87b2745045befef552d38b9290123c722e4b2ef6065c2c9b935ee3abe WHIRLPOOL cd96d6242709edb1bcb0b579e268fde6fb7f850871c7243333e98f95cdfdfb9b0f1a171452cd645baa11721bebc3656856ca729342f80c6ecac8c6744886e21e
+MISC ChangeLog 486 SHA256 9e2abc26030601fc23a6626efa325a0e0b9d5bc7981335ca069df69146d2e2c4 SHA512 d95a2c5c72c56e3dd3b873c66744764454ac134573e635fe3a0a9f137465f33f57c4e222055064b5f9a109b6c2867c4442d0748cd373a6e46455439f712a680a WHIRLPOOL 8b17d8705d1b722cd0167dc83621deccf33c7d9cc09a774afcc5ca08e985adb4aa3da5e7516013248938dc85fd987b94f5bdcdf6c0bde23347552f736999a447
 MISC metadata.xml 262 SHA256 d398d0e16fdb94eacae83d3e3261e59cc8946dd2b5acb421b1e4564a1b1ea513 SHA512 88a88554d1d97aaa67ea65107885d68230739397e9d91a5a31dcbc02a634b423824adaefccc81ae062c971cf01d1b9858a52e5ebcfb2dfe00540915d9c0bdac9 WHIRLPOOL 7f374705d98e2e26c7aa6d3db970445044f59c42a1ac89693935b90473d75e1edfd996bc3a9bc50bc955ec4d955fddfabdefefb7ff02deecc4bb7f7b52bcb881
