@@ -1,4 +1,4 @@
-# Copyright 1999-2015 Gentoo Foundation
+# Copyright 1999-2016 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -8,7 +8,7 @@ inherit git-r3 qt4-r2
 
 DESCRIPTION="Clipboard synchronization tool"
 HOMEPAGE="http://www.havefun.cz/projects/haveclip/"
-EGIT_REPO_URI="https://git.havefun.cz/haveclip/haveclip-desktop.git"
+EGIT_REPO_URI="https://github.com/aither64/haveclip-desktop.git"
 
 LICENSE="GPL-3"
 SLOT="0"
@@ -18,7 +18,8 @@ DEPEND="dev-qt/qtcore:4[ssl]
 	dev-qt/qtgui:4
 	virtual/pkgconfig
 	x11-libs/libX11
-	x11-proto/xproto"
+	x11-proto/xproto
+	dev-libs/openssl"
 
 IUSE="+devel debug"
 
