@@ -1,3 +1,6 @@
+  05 May 2016; Jakub Skokan <aither@havefun.cz> haveclip-9999.ebuild:
+  x11-misc/haveclip: live build: use github, require openssl
+
 *haveclip-9999 (01 Jun 2015)
 
   01 Jun 2015; Jakub Skokan <aither@havefun.cz> +haveclip-9999.ebuild,
